[gd_scene load_steps=13 format=3 uid="uid://bd2tnv5oyxlic"]

[ext_resource type="Script" path="res://scenes/onscreen scenes/lobby.gd" id="1_puff8"]
[ext_resource type="Theme" uid="uid://sqgks8wwf6dj" path="res://basic_theme.tres" id="2_e4gqy"]
[ext_resource type="Script" path="res://scenes/onscreen scenes/players_list.gd" id="3_rmohj"]
[ext_resource type="Texture2D" uid="uid://dqgyj8v6q6dcy" path="res://textures/figures/king_white.png" id="6_8c0cn"]
[ext_resource type="PackedScene" uid="uid://bpeoub30exi6b" path="res://scenes/UI/chat.tscn" id="7_buxss"]
[ext_resource type="FontFile" uid="uid://dfl6aut2a0v3r" path="res://fonts/JetBrainsMono-Bold.ttf" id="7_d6n3f"]
[ext_resource type="Texture2D" uid="uid://bter3i3sygn8t" path="res://textures/figures/king_black.png" id="7_p4rq1"]

[sub_resource type="LabelSettings" id="LabelSettings_px7bv"]
font = ExtResource("7_d6n3f")
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dnok5"]
texture = ExtResource("6_8c0cn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0lpsf"]
texture = ExtResource("6_8c0cn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ja7vs"]
texture = ExtResource("7_p4rq1")

[sub_resource type="GDScript" id="GDScript_vcdtx"]
script/source = "extends Button

func _ready():
	if not multiplayer.is_server():
		add_theme_stylebox_override(\"disabled\", get_theme_stylebox(\"pressed\"))
		button_pressed = true
	else:
		add_theme_stylebox_override(\"disabled\", get_theme_stylebox(\"normal\").duplicate())
	get_theme_stylebox(\"disabled\").modulate_color = Color(1, 1, 1, 0.6)

func _on_pressed():
	change_color.rpc()

@rpc(\"authority\", \"reliable\")
func change_color():
	button_pressed = not button_pressed
	var style = \"pressed\" if button_pressed else \"normal\"
	add_theme_stylebox_override(\"disabled\", get_theme_stylebox(style))
	get_theme_stylebox(\"disabled\").modulate_color = Color(1, 1, 1, 0.6)
"

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_puff8")

[node name="Start game" type="Button" parent="."]
layout_mode = 0
offset_left = -256.0
offset_top = -22.0
offset_right = -120.0
offset_bottom = 28.0
theme = ExtResource("2_e4gqy")
text = "Start game
"
icon_alignment = 1

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -85.0
offset_top = -22.0
offset_right = 84.0

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 5

[node name="Players list" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
script = ExtResource("3_rmohj")

[node name="Masthead" type="Label" parent="Panel/Margin/Players list"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_e4gqy")
text = "Players in lobby:"
label_settings = SubResource("LabelSettings_px7bv")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 118.0
offset_top = -22.0
offset_right = 229.0
offset_bottom = 74.0

[node name="Panel" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Margin" type="MarginContainer" parent="VBox/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="VBox/Panel/Margin"]
layout_mode = 2
theme = ExtResource("2_e4gqy")
text = "Your color:"

[node name="Change color" type="Button" parent="VBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_dnok5")
theme_override_styles/hover = SubResource("StyleBoxTexture_0lpsf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ja7vs")
disabled = true
toggle_mode = true
action_mode = 0
expand_icon = true
script = SubResource("GDScript_vcdtx")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -580.0
offset_top = -22.0
offset_right = -284.0
offset_bottom = 28.0

[node name="IP" type="RichTextLabel" parent="HBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 6
focus_mode = 2
theme = ExtResource("2_e4gqy")
fit_content = true
scroll_active = false
selection_enabled = true

[node name="Copy" type="Button" parent="HBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("2_e4gqy")
text = "Copy IP"

[node name="Notification" type="Label" parent="."]
visible = false
layout_mode = 2
offset_left = -580.0
offset_top = 30.0
offset_right = -483.0
offset_bottom = 53.0
size_flags_vertical = 3
theme = ExtResource("2_e4gqy")
text = "Copied IP!"

[node name="Timer" type="Timer" parent="Notification"]
wait_time = 2.5
one_shot = true

[node name="Chat" parent="." instance=ExtResource("7_buxss")]
layout_mode = 1
offset_left = 297.0
offset_top = 100.0
offset_right = 297.0
offset_bottom = 100.0

[connection signal="pressed" from="Start game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBox/Change color" to="VBox/Change color" method="_on_pressed"]
[connection signal="pressed" from="HBox/Copy" to="." method="_on_copy_pressed"]
[connection signal="timeout" from="Notification/Timer" to="." method="_on_timer_timeout"]
